using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace TaskIt.Classes
{
    public class Journal
    {
        public string Name { get; set; }
        public string Path { get; set; }
        public DateTime LastChanged { get; set; }
        public Journal(string path, string name, DateTime lastChanged)
        {
            Path = path;
            Name = name;
            LastChanged = lastChanged;
        }

    }
}
